# envytweaks

./: .gitignore  README.md  diagnose.py  install.sh
.github/workflows/: ci.yml
envytweaks-cli/: README.md  com.envytweaks.policy  pyproject.toml
envytweaks-cli/src/envytweaks/: __init__.py  cache.py  cli.py  config.py  switcher.py  system.py
envytweaks-gnome/: build.sh  extension.js  metadata.json  prefs.js
envytweaks-gnome/lib/: Utility.js
envytweaks-gnome/locale/: es.po
envytweaks-gnome/locale/es/LC_MESSAGES/: envytweaks.mo
envytweaks-gnome/schemas/: org.gnome.shell.extensions.envytweaks.gschema.xml
envytweaks-gnome/ui/: QuickSettingsView.js  TopBarView.js
envytweaks-kde/: README.md  metadata.json
envytweaks-kde/contents/config/: main.xml
envytweaks-kde/contents/locale/: base.pot
envytweaks-kde/contents/locale/es/: es.po
envytweaks-kde/contents/locale/es/LC_MESSAGES/: plasma_applet_optimus-gpu-switcher.mo
envytweaks-kde/contents/ui/: configGeneral.qml  main.qml
ia_doc/: CONTEXT_PRIMER.md  DOCUMENTATION.md  ia_doc.md
po/: envytweaks.pot
