[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "envytweaks"
version = "1.0.0"
description = "GPU mode switcher for NVIDIA Optimus laptops on Linux"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["nvidia", "optimus", "prime", "gpu", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]

[project.scripts]
envytweaks = "envytweaks.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
